--- a/resources/configurations/pyload/pyload.conf
+++ b/resources/configurations/pyload/pyload.conf
@@ -16,9 +16,9 @@ downloadTime - "Download Time":
 general - "General":
 	bool checksum : "Use Checksum" = False
 	bool debug_mode : "Debug Mode" = False
-	folder download_folder : "Download Folder" = /content/downloads
+	folder download_folder : "Download Folder" = /content/drive/Shareddrives/Paso Paw
 	bool folder_per_package : "Create folder for each package" = True
-	en;de;fr;it;es;nl;sv;ru;pl;cs;sr;pt_BR language : "Language" = en
+	es;de;fr;it;es;nl;sv;ru;pl;cs;sr;pt_BR language : "Language" = es
 	int min_free_space : "Min Free Space (MB)" = 200
 	int renice : "CPU Priority" = 0
 
