--- a/resources/configurations/qbittorrent/qBittorrent.conf
+++ b/resources/configurations/qbittorrent/qBittorrent.conf
@@ -44,11 +44,11 @@ Connection\ResolvePeerCountries=true
 Connection\ResolvePeerHostNames=true
 Downloads\DiskWriteCacheSize=-1
 Downloads\PreAllocation=false
-Downloads\SavePath=/content/downloads/
+Downloads\SavePath=/content/drive/Shareddrives/Paso Paw
 Downloads\SaveResumeDataInterval=10
 Downloads\ScanDirsV2=@Variant(\0\0\0\x1c\0\0\0\x1\0\0\0\x12\0/\0\x63\0o\0n\0t\0\x65\0n\0t\0/\0\0\0\x2\0\0\0\x1)
 Downloads\StartInPause=false
-Downloads\TempPath=/content/downloads/temp/
+Downloads\TempPath=/content/drive/Shareddrives/Paso Paw
 Downloads\TempPathEnabled=true
 DynDNS\DomainName=changeme.dyndns.org
 DynDNS\Enabled=false
