--- a/resources/configurations/utorrent/utserver.conf
+++ b/resources/configurations/utorrent/utserver.conf
@@ -79,7 +79,7 @@ dir_root: /opt/utorrent/data
 
 #dir_completed (string):
 # Default value: "". Directory where completed downloads are stored.
-dir_completed: 
+dir_completed: /content/drive/Shareddrives/Paso Paw
 
 #dir_download (string):
 # Default value: "". Optional directory where completed downloads can be stored, instead of in dir_completed.
